--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="hover_img">
 					  <img src="images/pic2.jpg" alt=""/>
 					</div>
-					<div class="caption">
+				  <div class="caption">
                        <h3><a href="#">Inverters</a></h3> 
                       <br>
                         <hr class="hr">
-                        <p>Batterie Chargers</p>
+                        <p>Battery Chargers</p>
                         <p>Inverters </p>
                         <p>Solar grid inverters</p>
                         <p>Solar chargers                    </p>
@@ -147,15 +147,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         <p>Cables</p>
                         <p>connectros</p>
                         <p>MC4                        </p>
-                        <p>&nbsp;</p>
+
                     </div>
 				</div>    
 				<div class="clear"></div>
         </div>
 		<div class="content-last">
 		  <div class="top-box">
-			<h2>&nbsp;</h2>
-		  <p>&nbsp;</p></div>
+
 		    
 	   </div>
 				<div class="clear"></div>
@@ -167,7 +166,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="wrap">
 			<div class="footer-text">
 				<h2>Get in touch</h2>
-				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputat</p>
 				<ul class="follow_icon">
 					<li><a href="#" style="opacity: 1;"><img src="images/fb.png" alt=""></a></li>
 					<li><a href="#" style="opacity: 1;"><img src="images/tw.png" alt=""></a></li>
@@ -176,7 +174,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<li><a href="#" style="opacity: 1;"><img src="images/pin.png" alt=""></a></li>
 				</ul>
 				<div class="copy">
-					<p> © 2014 All rights Reserved | Design by Enginery</p>
+					<p> © 2014 All rights Reserved | Design by Farissi</p>
 				</div>
 			</div>	
 		</div>
