--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	 <div class="wrap">
 		<div class="content-top">
 			 <div class="top-box">
-				<h2>Welcome</h2>
+				<h2>Welcome to Solar Maroc</h2>
 				<hr>
 				<p>SolarMaroc is a wholesaler of solar power systems. We import and distribute top quality products of the best brands in the world </p>
 			 </div>
