--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                      <a href="index.html"><img src="images/viewlogo.jpg" alt=""/></a>
                     </div>
                     <div id="text-6" class="visible-all-devices header-text ">			
-                        <h5> Login / register</h5>
+                        <h4> Login / register</h4>
                     </div>       
                 </div>
             <!--</div>-->	
@@ -63,11 +63,57 @@
 		<div class="main">
 	 		<!--<div class="wrap">-->
 				<div class="content-top">
-                    <div class="top-box">
-                        <h2>Welcome to Solar Maroc</h2>
-                        <hr>
-                        <p>SolarMaroc is a wholesaler of solar power systems. We import and distribute top quality products of the best brands in the world. Solar Maroc focuses on serving its customers with a wide selection of solar power products, providing easily understood information on solar, photovoltaic power and solar energy</p>
+               	  <div  class="col span_1_of_about">
+                        <div class="top-box">
+                            <h3> Welcome to Solar Maroc</h3>         
+                            <p> Solar Maroc is specialized in renewable energy system design, engineering and distribution.  We import and distribute high quality products of the best brands in the world. Solar Maroc focuses on serving its customers with a wide selection of solar power products, providing easily understood information on solar, photovoltaic power and solar energy. </p>
+                            <p>Our expertise in<strong> Photovoltaics and Power Conversion Devices,</strong> coupled with our comprehensive line of <strong>Conservation Devices</strong> ensures that you receive the greatest value possible from your system purchase.</p>
+                            <p>&nbsp;</p>
+                            <p>Solar Maroc's team of professionals provide a full service approach to projects that <strong>ensures our clients to receive  maximum benefits from their systems</strong> through system design, product selection, and performance optimization. 
+                              <br>
+                          </p>
+                          <p><strong>Solar Maroc has a wide variety of long life, non-consumable renewable energy products listed below</strong></p>
+                        </div>
                     </div>
+                    <div class="col span_1_of_about1">
+						<h3>Articles</h3>
+						<ul class="comments-custom unstyled">			
+					      <li class="comments-custom_li">
+								<div class="icon"></div>
+								<div class="right-text">	
+									<h4 class="comments-custom_h">solar expo 2014:</h4>
+										<div class="comments-custom_txt">
+											<a href="#" title="Go to this comment">Sed ut perspiciatis unde omnis iste...</a>
+										</div>
+										<time>May 05,2014</time>
+								</div>
+								<div class="clear"></div>
+							</li>
+							<li class="comments-custom_li">
+								<div class="icon"></div>
+								<div class="right-text">	
+									<h4 class="comments-custom_h">How does it work:</h4>
+										<div class="comments-custom_txt">
+											<a href="#" title="Go to this comment">Sed ut perspiciatis unde omnis iste...</a>
+										</div>
+										<time>Jan 15,2014</time>
+								</div>
+								<div class="clear"></div>
+							</li>
+							<li class="comments-custom_li">
+								<div class="icon"></div>
+								<div class="right-text">	
+									<h4 class="comments-custom_h">Residential storage:</h4>
+										<div class="comments-custom_txt">
+											<a href="#" title="Go to this comment">Sed ut perspiciatis unde omnis iste...</a>
+										</div>
+										<time>Dec 12,2013</time>
+								</div>
+								<div class="clear"></div>
+							</li>
+					</ul>
+				</div>
+					<div class="clear"></div>
 				</div>
 		    	<div class="section group">
 					<div class="col_1_of_5 span_1_of_5">
@@ -75,12 +121,14 @@
 					  		<img src="images/pic.jpg" alt=""/>
 						</div>
 						<div class="caption">
-                       		<h3><a href="#">Solar Panels</a></h3><br>
+                       		<h2><a href="#">Solar Panels</a></h2><br>
                         	<hr class="hr">
-                        	<p>Home Size Solar Panels</p>
-                      		<p>Mobile RV Solar Panels</p>
-                        	<p>Mobile Marine Solar Panels</p>
-                        	<p>&nbsp;</p>
+                            <ol class="standard_list">
+                                <li>Home Size Solar Panels</li>
+                                <li>Mobile RV Solar Panels</li>
+                                <li>Mobile Marine Solar Panels</li>
+                                <p>&nbsp;</p>
+                            </ol>
                     	</div>
 					</div>
 					<div class="col_1_of_5 span_1_of_5">
@@ -88,13 +136,15 @@
 					  		<img src="images/pic1.jpg" alt=""/>
 						</div>
 						<div class="caption">
-                        	<h3><a href="#">Batteries</a></h3> 
+                        	<h2><a href="#">Batteries</a></h2> 
                       		<br>
                             <hr class="hr">
-                            <p>AGM batteries,</p>
-                            <p>GEL batteries,</p>
-                            <p>LiIon</p>
-                            <p>&nbsp;</p>
+                            <ul class="standard_list">
+                                <li>AGM batteries</li>
+                                <li>GEL batteries</li>
+                                <li>LiIon</li>
+                                <p>&nbsp;</p>
+                            </ul>
 						</div>
 					</div>
 					<div class="col_1_of_5 span_1_of_5">
@@ -102,13 +152,15 @@
 					  		<img src="images/pic2.jpg" alt=""/>
 						</div>
 				  		<div class="caption">
-                       		<h3><a href="#">Inverters</a></h3> 
+                       		<h2><a href="#">Inverters</a></h2> 
                       		<br>
                             <hr class="hr">
-                            <p>Battery Chargers</p>
-                            <p>Inverters </p>
-                            <p>Solar grid inverters</p>
-                            <p>Solar chargers</p>
+                             <ul class="standard_list">
+                                <li>Battery Chargers</li>
+                                <li>Inverters</li>
+                                <li>Solar grid inverters</li>
+                                <li>Solar chargers</li>
+                            </ul>
 						</div>
 					</div>
 					<div class="col_1_of_5 span_1_of_5">
@@ -116,13 +168,12 @@
                             <img src="images/pic3.jpg" alt=""/>
                         </div>
 						<div class="caption">
-                        	<h3><a href="#">Mouniting systems</a></h3> 
+                        	<h2><a href="#">Mouniting systems</a></h2> 
                       		<br>
                             <hr class="hr">
-                            <p>All kind of mounting systems</p>
-                            <p>&nbsp;</p>
-                            <p>&nbsp;</p>
-                            <p>&nbsp;</p>
+                            <ul class="standard_list">
+                                <li>All kind of mounting systems</li>
+                            </ul>
 						</div>
 					</div>
 					<div class="col_1_of_5 span_1_of_5">
@@ -130,12 +181,13 @@
                           <img src="images/pic4.jpg" alt=""/>
                         </div>
 						<div class="caption">
-                            <h3><a href="#">Accesoires  </a></h3><br>
+                            <h2><a href="#">Accesoires  </a></h2><br>
                             <hr class="hr">
-                            <p>Cables</p>
-                            <p>connectros</p>
-                            <p>MC4</p>
-
+                            <ul class="standard_list">
+                                <li>Cables</li>
+                                <li>connectros</li>
+                                <li>MC4</li>
+                            </ul>
                     	</div>
 					</div>    
 					<div class="clear"></div>
