--- a/services.html
+++ b/services.html
@@ -1,70 +1,57 @@
-<!--A Design by W3layouts
-Author: W3layout
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Free Enginery Website Template | Services</title>
-<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link href='http://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
-<!------ Light Box ------>
-<script type="text/javascript" src="js/jquery-1.9.0.min.js"></script>
-<link rel="stylesheet" href="css/swipebox.css">
-<script src="js/ios-orientationchange-fix.js"></script> 
-<script src="js/jquery.swipebox.min.js"></script> 
-<script type="text/javascript">
-		jQuery(function($) {
-			$(".swipebox").swipebox();
-		});
-	</script>
-	<!------ Eng Light Box ------>	
+    <title>Solar Maroc - wholesale of solar systems | Home</title>
+    <link href="css/style.css" rel="stylesheet" type="text/css" media="screen" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <link href='http://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
+    <!--slider-->
+    <link href="css/slider.css" rel="stylesheet" type="text/css" media="all"/>
+    <script type="text/javascript" src="js/jquery-1.9.0.min.js"></script>
+    <script type="text/javascript" src="js/jquery.nivo.slider.js"></script>
+    <script type="text/javascript">
+        $(window).load(function() {
+            $('#slider').nivoSlider();
+        });
+    </script>
 </head>
+
 <body>
-<div class="header">	
-  <div class="wrap"> 
-	<div class="header-top">
-		 		 <div class="logo">
-			 <h1><a href="index.html">                   <div class="hover_img">
-			   <img src="images/viewlogo.jpg" alt=""/>
-				   </div></a></h1>
-		 </div>
-	    <div id="text-6" class="visible-all-devices header-text ">			
-	    	<div class="textwidget">
-				</div>
-                <h5> Login / Register</h5></div>
-		</div>
-		 <div class="clear"></div> 
-	   </div>
-   </div>	
-</div>
-      <!------ Slider ------------>
-   <div class="about-banner">
-      <div class="wrap">
-		   <div class="cssmenu">
-				<ul>
-				   <li><a href="index.html"><span>Home</span></a></li>
-				   <li><a href="about.html"><span>About us</span></a></li>
-				   <li><a href="products.html"><span>Products</span></a></li>
-				   <li class="active"><a href="services.html"><span>Services</span></a></li>
-				   <li class="last"><a href="contact.html"><span>Contact</span></a></li>
-				 	<div class="clear"></div>
-				 </ul>
-	       </div>
-	  </div>
-   </div>
-		<!------End Slider ------------>
+    <div class="wrap">
+        <div class="header">	
+            <!--<div class="wrap">-->
+                <div class="header-top">
+                    <div class="logo">
+                     <a href="index.html"><img src="images/viewlogo.jpg" alt=""/></a>
+                    </div>
+                    <div id="text-6" class="visible-all-devices header-text ">			
+                        <h5> Login / register</h5>
+                    </div>       
+                </div>
+            <!--</div>-->	
+        </div>
+        <!------ Slider ------------>
+        <div class="about-banner">
+            <!--<div class="wrap">-->
+               <div class="cssmenu">
+                    <ul>
+                       <li> <a href="index.html"><span>Home</span></a></li>
+                       <li><a href="about.html"><span>About us</span></a></li>
+                       <li><a href="products.html"><span>Product</span></a></li>
+                       <li class="active" "has-sub"><a href="services.html"><span>Services</span></a></li>
+                       <li class="last"><a href="contact.html"><span>Contact</span></a></li>
+                       <div class="clear"></div>
+                     </ul>
+               </div>
+            <!--</div>-->
+        </div>
+        <!------End Slider ------------>
   <div class="main">
-	 <div class="wrap">
+	 <!--<div class="wrap">-->
 		<div class="products">
 			 <div class="top-box">
 				<h2>Services</h2>
-				<hr>
-				<p class="desc">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim</p>
 			 </div>
 			 <div class="padd">
                 <div class="row">
@@ -161,26 +148,26 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="clear"></div>
 			</div>
 		</div>
-	 </div>
+	 <!--</div>-->
 	</div>
-	<div class="footer">
-		<div class="wrap">
-			<div class="footer-text">
-				<h2>Get in touch</h2>
-				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputat</p>
-				<ul class="follow_icon">
-					<li><a href="#" style="opacity: 1;"><img src="images/fb.png" alt=""></a></li>
-					<li><a href="#" style="opacity: 1;"><img src="images/tw.png" alt=""></a></li>
-					<li><a href="#" style="opacity: 1;"><img src="images/rss.png" alt=""></a></li>
-					<li><a href="#" style="opacity: 1;"><img src="images/g+.png" alt=""></a></li>
-					<li><a href="#" style="opacity: 1;"><img src="images/pin.png" alt=""></a></li>
-				</ul>
-				<div class="copy">
-					<p> © 2014 All rights Reserved | Design by Enginery</p>
-				</div>
-			</div>	
-		</div>
-	</div>
+    <div class="footer">
+                <!--<div class="wrap">-->
+                    <div class="footer-text">
+                        <h2>Get in touch</h2>
+                        <ul class="follow_icon">
+                            <li><a href="#" style="opacity: 1;"><img src="images/fb.png" alt=""></a></li>
+                            <li><a href="#" style="opacity: 1;"><img src="images/tw.png" alt=""></a></li>
+                            <li><a href="#" style="opacity: 1;"><img src="images/rss.png" alt=""></a></li>
+                            <li><a href="#" style="opacity: 1;"><img src="images/g+.png" alt=""></a></li>
+                            <li><a href="#" style="opacity: 1;"><img src="images/pin.png" alt=""></a></li>
+                        </ul>
+                        <div class="copy">
+                            <p> © 2014 All rights Reserved | Design by Farissi</p>
+                        </div>
+                    </div>	
+                <!--</div>-->
+            </div>
+    </div>
 </body>
 </html>
 
