--- a/contact.html
+++ b/contact.html
@@ -1,53 +1,53 @@
-<!--A Design by W3layouts
-Author: W3layout
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Free Enginery Website Template | Contact</title>
-<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link href='http://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
+    <title>Solar Maroc - wholesale of solar systems | Home</title>
+    <link href="css/style.css" rel="stylesheet" type="text/css" media="screen" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <link href='http://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
+    <!--slider-->
+    <link href="css/slider.css" rel="stylesheet" type="text/css" media="all"/>
+    <script type="text/javascript" src="js/jquery-1.9.0.min.js"></script>
+    <script type="text/javascript" src="js/jquery.nivo.slider.js"></script>
+    <script type="text/javascript">
+        $(window).load(function() {
+            $('#slider').nivoSlider();
+        });
+    </script>
 </head>
+
 <body>
-<div class="header">	
-  <div class="wrap"> 
-	<div class="header-top">
-		 		 		 <div class="logo">
-			 <h1><a href="index.html">                   <div class="hover_img">
-			   <img src="images/viewlogo.jpg" alt=""/>
-				   </div></a></h1>
-		 </div>
-	    <div id="text-6" class="visible-all-devices header-text ">			
-	    	<div class="textwidget">
-				</div>
-                <h3> Login / Register</h3></div>
-		 <div class="clear"></div> 
-	   </div>
-   </div>	
-</div>
-      <!------ Slider ------------>
-   <div class="about-banner">
-      <div class="wrap">
-		   <div class="cssmenu">
-				<ul>
-				   <li><a href="index.html"><span>Home</span></a></li>
-				   <li><a href="about.html"><span>About us</span></a></li>
-				   <li><a href="products.html"><span>Products</span></a></li>
-				   <li><a href="services.html"><span>Services</span></a></li>
-				   <li class="active"><a href="contact.html"><span>Contact</span></a></li>
-				  <div class="clear"></div>
-			   </ul> 
-	       </div>
-	  </div>
-   </div>
-		<!------End Slider ------------>
-  <div class="main">
-	 <div class="wrap">
+    <div class="wrap">
+        <div class="header">	
+            <!--<div class="wrap">-->
+                <div class="header-top">
+                    <div class="logo">
+                     <a href="index.html"><img src="images/viewlogo.jpg" alt=""/></a>
+                    </div>
+                    <div id="text-6" class="visible-all-devices header-text ">			
+                        <h5> Login / register</h5>
+                    </div>       
+                </div>
+            <!--</div>-->	
+        </div>
+        <!------ Slider ------------>
+        <div class="about-banner">
+            <!--<div class="wrap">-->
+               <div class="cssmenu">
+                    <ul>
+                       <li> <a href="index.html"><span>Home</span></a></li>
+                       <li><a href="about.html"><span>About us</span></a></li>
+                       <li><a href="products.html"><span>Product</span></a></li>
+                       <li class="has-sub"><a href="services.html"><span>Services</span></a></li>
+                       <li class="active" "last"><a href="contact.html"><span>Contact</span></a></li>
+                       <div class="clear"></div>
+                     </ul>
+               </div>
+            <!--</div>-->
+        </div>
+        <!------End Slider ------------>
+  		<div class="main">
 		<div class="section group">
 				<div class="col span_2_of_3">
 				  <div class="contact-form">
@@ -95,26 +95,26 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				 </div>
 				   <div class="clear"></div>
 			  </div>
-	 </div>
-	</div>
-	<div class="footer">
-		<div class="wrap">
-			<div class="footer-text">
-				<h2>Get in touch</h2>
-				<p>&nbsp;</p>
-				<ul class="follow_icon">
-					<li><a href="#" style="opacity: 1;"><img src="images/fb.png" alt=""></a></li>
-					<li><a href="#" style="opacity: 1;"><img src="images/tw.png" alt=""></a></li>
-					<li><a href="#" style="opacity: 1;"><img src="images/rss.png" alt=""></a></li>
-					<li><a href="#" style="opacity: 1;"><img src="images/g+.png" alt=""></a></li>
-					<li><a href="#" style="opacity: 1;"><img src="images/pin.png" alt=""></a></li>
-				</ul>
-				<div class="copy">
-					<p> © 2014 All rights Reserved | Design by Hommad</p>
-				</div>
-			</div>	
+
 		</div>
-	</div>
+	  	<div class="footer">
+                <!--<div class="wrap">-->
+                    <div class="footer-text">
+                        <h2>Get in touch</h2>
+                        <ul class="follow_icon">
+                            <li><a href="#" style="opacity: 1;"><img src="images/fb.png" alt=""></a></li>
+                            <li><a href="#" style="opacity: 1;"><img src="images/tw.png" alt=""></a></li>
+                            <li><a href="#" style="opacity: 1;"><img src="images/rss.png" alt=""></a></li>
+                            <li><a href="#" style="opacity: 1;"><img src="images/g+.png" alt=""></a></li>
+                            <li><a href="#" style="opacity: 1;"><img src="images/pin.png" alt=""></a></li>
+                        </ul>
+                        <div class="copy">
+                            <p> © 2014 All rights Reserved | Design by Farissi</p>
+                        </div>
+                    </div>	
+                <!--</div>-->
+            </div>
+    </div>
 </body>
 </html>
 
