--- a/about.html
+++ b/about.html
@@ -54,18 +54,13 @@
           <div class="clear">4</div>
           <div class="about-bottom">
 	         <div class="about-topgrids">
-						<div class="about-topgrid1">
+			   <div class="about-topgrid1">
                             <h3>About</h3>
-                            <img src="images/pic9.jpg" title="name">
+                 <img src="images/solar_flag_maroc.jpg" title="name">
                             <h2>Solar Products: </h2>
                             <p>We sell tons of solar panels and solar panel products along with kits that make it simple to install yourself</p>
-                            <p>| Solar Panels | Solar Kits | Charge Controllers | Inverters – Pure Sine Inverters – Grid Tie Inverters - Off Grid Inverters | Solar Batteris | Cables &amp; Connectors | Enclosures | Combiner Boxes | Connectors | Mounting Kits | LED Lights | Renewable Power | Off Grid Kits | Grid Tie Kits | Power Back-up Systems | RV Kits | RV Solar Panels</p>
-                            <p>We have lots of Solar Panels instock in Tanger. We have solar panels ranging from 20W solar panels / 40 watt Solar Panels / 70 watt solar panels / 100 watt solar panels / 150 watt solar panels 250 watt solar panels and up!</p>
-                            <p>&nbsp;</p>
-                            <h2>Power Converters:</h2>
-                            <p>We sell tons of solar panels and solar panel products along with kits that make it simple to install yourself</p>
-                            <p>| Solar Panels | Solar Kits | Charge Controllers | Inverters – Pure Sine Inverters – Grid Tie Inverters - Off Grid Inverters | Solar Batteris | Cables &amp; Connectors | Enclosures | Combiner Boxes | Connectors | Mounting Kits | LED Lights | Renewable Power | Off Grid Kits | Grid Tie Kits | Power Back-up Systems | RV Kits | RV Solar Panels</p>
-                            <h5>&nbsp;</h5>
+                 <p>| Solar Panels | Solar Kits | Charge Controllers | Inverters – Pure Sine Inverters – Grid Tie Inverters - Off Grid Inverters | Solar Batteris | Cables &amp; Connectors | Enclosures | Combiner Boxes | Connectors | Mounting Kits | LED Lights | Renewable Power | Off Grid Kits | Grid Tie Kits | Power Back-up Systems | RV Kits | RV Solar Panels</p>
+                 <p>We have lots of Solar Panels instock in Tanger. We have solar panels ranging from 20W solar panels / 40 watt Solar Panels / 70 watt solar panels / 100 watt solar panels / 150 watt solar panels 250 watt solar panels and up!				 </p>
 						</div>
 				   </div>
 				</div>
@@ -81,7 +76,7 @@
 				   </div>
 				</div>
           <div class="about-services">
-                    <h3>Why Choose Us</h3>
+                    <h3>News</h3>
                     <div class="questions">
                       <h4><img src="images/marker.png" alt="">&nbsp;What is Lorem Ipsum?</h4>
                       <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
@@ -97,26 +92,25 @@
 				</div>
 				<div class="clear"></div> 
 		</div>
-		<div class="footer">
-		<!--<div class="wrap">-->
-			<div class="footer-text">
-				<h2>Get in touch</h2>
-				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputat</p>
-				<ul class="follow_icon">
-					<li><a href="#" style="opacity: 1;"><img src="images/fb.png" alt=""></a></li>
-					<li><a href="#" style="opacity: 1;"><img src="images/tw.png" alt=""></a></li>
-					<li><a href="#" style="opacity: 1;"><img src="images/rss.png" alt=""></a></li>
-					<li><a href="#" style="opacity: 1;"><img src="images/g+.png" alt=""></a></li>
-					<li><a href="#" style="opacity: 1;"><img src="images/pin.png" alt=""></a></li>
-				</ul>
-				<div class="copy">
-					<p> © 2014 All rights Reserved | Design by Enginery</p>
-				</div>
-			</div>	
-		<!--</div>-->
+      </div>
+ 		<div class="footer">
+            <!--<div class="wrap">-->
+                <div class="footer-text">
+                    <h2>Get in touch</h2>
+                    <ul class="follow_icon">
+                        <li><a href="#" style="opacity: 1;"><img src="images/fb.png" alt=""></a></li>
+                        <li><a href="#" style="opacity: 1;"><img src="images/tw.png" alt=""></a></li>
+                        <li><a href="#" style="opacity: 1;"><img src="images/rss.png" alt=""></a></li>
+                        <li><a href="#" style="opacity: 1;"><img src="images/g+.png" alt=""></a></li>
+                        <li><a href="#" style="opacity: 1;"><img src="images/pin.png" alt=""></a></li>
+                    </ul>
+                    <div class="copy">
+                        <p> © 2014 All rights Reserved | Design by Farissi</p>
+                    </div>
+                </div>	
+            <!--</div>-->
+        </div>
 	</div>
-    </div>
-     </div>
 </body>
 </html>
 
