--- a/contact.html
+++ b/contact.html
@@ -89,7 +89,7 @@
 						   		<p>Maroc</p>
 				   		<p>Phone:(00) 212 666 444</p>
 				   		<p>Fax: (000) 000 00 00 0</p>
-				 	 	<p>Email: <span>info@solarmaroc.com</span></p>
+				 	 	<p>Email: <span>solarmaroc@outlook.com</span></p>
 				   		<p>Follow on: <span>Facebook</span>, <span>Twitter</span></p>
 				   </div>
 				 </div>
