--- a/services.html
+++ b/services.html
@@ -52,22 +52,21 @@
 		<div class="products">
 			 <div class="top-box">
 				<h2>Services</h2>
-			 </div>
 			 <div class="padd">
                 <div class="row">
                     <div class="span6 offset3">
-                        <h4 class="head">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros</h4>
+                        <p class="head">Solar Maroc is a full-service design-build solar solutions company employing integrated design principles to build the most efficient and cost effective PV systems. We are optimized to work with customers during the renewable energy planning and overall project design stage, providing what we call value engineering with the goal of creating state-of-the-art designs to reduce environmental impacts of materials, and enhance indoor environmental quality. Some of the most innovative design engineers rely on the consulting services of Solar Maroc to design efficient photovoltaic (PV) grid-tied and off-grid electricity generation systems.  Large or small, Solar Maroc designs and builds custom solar solutions using only proven components from the most reputable manufacturers who work with our solar installers to improve designs for ease of installation, reliability, and value. Included in our services are consulting for solar design and solar installations, certified Hydrost						op installations and indoor environmental controls and monitors.</p>
                     </div>
                     <div class="clearfix"></div>
-                 </div>
+               </div>
             </div>
 		    <div class="section group">
 				<div class="col_1_of_4 span_1_of_4">
 					<a href="images/t-pic10.jpg" class="swipebox" title="Image Title"> <img src="images/pic10.jpg" alt=""><span class="zoom-icon"></span> </a>
 					   <div class="list-box">
-                          	<h5>Nam liber tempor</h5>
-                           	<p class="txt2">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet Mauris fermentum dictum</p>
-                       </div>
+                          	<h5>Sale</h5>
+                           	<p class="txt2">We Import and distribute a wide range of solar systems products. We sell only products with a proven quality and low failure rates...</p>
+                  </div>
                        <div class="more">
                          <a href="#" class="btn btn-primary btn1">read more</a>
                        </div>
@@ -75,19 +74,19 @@
 				<div class="col_1_of_4 span_1_of_4">
 					<a href="images/t-pic11.jpg" class="swipebox" title="Image Title"> <img src="images/pic11.jpg" alt=""><span class="zoom-icon"></span> </a>
 					  <div class="list-box">
-                          	<h5>Nam liber tempor</h5>
-                           	<p class="txt2">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet Mauris fermentum dictum</p>
-                       </div>
+                          	<h5>Engineering</h5>
+                           	<p class="txt2">Solar Maroc can help you with the engineering of your solar system. We believe that we have the knowledge and experience ..</p>
+                  </div>
                         <div class="more">
                          <a href="#" class="btn btn-primary btn1">read more</a>
                        </div>
 				</div>
 				<div class="col_1_of_4 span_1_of_4">
 				   <a href="images/t-pic12.jpg" class="swipebox" title="Image Title"> <img src="images/pic12.jpg" alt=""><span class="zoom-icon"></span> </a>
-					  <div class="list-box">
-                          	<h5>Nam liber tempor</h5>
-                           	<p class="txt2">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet Mauris fermentum dictum</p>
-                       </div>
+				  <div class="list-box">
+                   	<h5>Installation</h5>
+                       	<p class="txt2">All installations are carried out by our own personnel or licensed dealers, depending on geographic location. We install all types of solar systems..</p>
+                    </div>
                         <div class="more">
                          <a href="#" class="btn btn-primary btn1">read more</a>
                        </div>
@@ -95,52 +94,8 @@
 				<div class="col_1_of_4 span_1_of_4">
 					<a href="images/t-pic13.jpg" class="swipebox" title="Image Title"> <img src="images/pic13.jpg" alt=""><span class="zoom-icon"></span> </a>
 					  <div class="list-box">
-                          	<h5>Nam liber tempor</h5>
-                           	<p class="txt2">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet Mauris fermentum dictum</p>
-                       </div>
-                        <div class="more">
-                         <a href="#" class="btn btn-primary btn1">read more</a>
-                       </div>
-				</div>
-				<div class="clear"></div>
-			</div>
-			 <div class="section group">
-				<div class="col_1_of_4 span_1_of_4">
-					<a href="images/t-pic14.jpg" class="swipebox" title="Image Title"> <img src="images/pic14.jpg" alt=""><span class="zoom-icon"></span> </a>
-					    <div class="list-box">
-                          	<h5>Nam liber tempor</h5>
-                           	<p class="txt2">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet Mauris fermentum dictum</p>
-                       </div>
-                        <div class="more">
-                         <a href="#" class="btn btn-primary btn1">read more</a>
-                       </div>
-				</div>
-				<div class="col_1_of_4 span_1_of_4">
-					<a href="images/t-pic15.jpg" class="swipebox" title="Image Title"> <img src="images/pic15.jpg" alt=""><span class="zoom-icon"></span> </a>
-					  <div class="list-box">
-                          	<h5>Nam liber tempor</h5>
-                           	<p class="txt2">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet Mauris fermentum dictum</p>
-                       </div>
-                        <div class="more">
-                         <a href="#" class="btn btn-primary btn1">read more</a>
-                       </div>
-				</div>
-				<div class="col_1_of_4 span_1_of_4">
-					<a href="images/t-pic16.jpg" class="swipebox" title="Image Title"> <img src="images/pic16.jpg" alt=""><span class="zoom-icon"></span> </a>
-					  <div class="list-box">
-                          	<h5>Nam liber tempor</h5>
-                           	<p class="txt2">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet Mauris fermentum dictum</p>
-                       </div>
-                        <div class="more">
-                         <a href="#" class="btn btn-primary btn1">read more</a>
-                       </div>
-				</div>
-				<div class="col_1_of_4 span_1_of_4">
-					<a href="images/t-pic17.jpg" class="swipebox" title="Image Title"> <img src="images/pic17.jpg" alt=""><span class="zoom-icon"></span> </a>
-					  <div class="list-box">
-                          	<h5>Nam liber tempor</h5>
-                           	<p class="txt2">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet Mauris fermentum dictum</p>
-                       </div>
+                          	<h5>Maintenance</h5>
+                           	<p class="txt2">We provide planned maintenance to all solar equipment installed by us. We mail service bulletins on a routine basis as a reminder that...</div>
                         <div class="more">
                          <a href="#" class="btn btn-primary btn1">read more</a>
                        </div>
@@ -148,6 +103,7 @@
 				<div class="clear"></div>
 			</div>
 		</div>
+        </div>
 	 <!--</div>-->
 	</div>
     <div class="footer">
